[build-system]
requires = [
    "setuptools",
    "Cython>=3.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "stream-inflate"
version = "0.0.0.dev0"
authors = [
  { name="Michal Charemza", email="michal@charemza.name" },
]
description = "Uncompress DEFLATE streams in pure Python (albeit compiled with Cython)"
readme = "README.md"
requires-python = ">=3.7.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Archiving :: Compression",
]

[project.optional-dependencies]
dev = [
    "coverage>=6.2",
    "pytest>=6.2.5",
    "pytest-cov>=3.0.0",
    "Cython>=3.0.0",
    "setuptools",
    "build",
]

[project.urls]
"Source" = "https://github.com/michalc/stream-inflate"

[tool.setuptools]
py-modules = ["stream_inflate"]
